--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,5 +1,3 @@
-# .readthedocs.yml
-
 version: 2
 
 sphinx:
@@ -11,4 +9,4 @@ python:
     - requirements: requirements.txt
 
 formats:
-  - html
+  - htmlzip
